// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`set up inquiry GET /Inquiry/setup/address should match the snapshot 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - start case</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> Do you know the address of where the inquiry will take place?</h1>
                                </legend>
                                <div class="govuk-radios" data-module="govuk-radios">
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="address-known" name="addressKnown"
                                        type="radio" value="yes" checked>
                                        <label class="govuk-label govuk-radios__label" for="address-known">Yes</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="address-known-2" name="addressKnown"
                                        type="radio" value="no">
                                        <label class="govuk-label govuk-radios__label" for="address-known-2">No</label>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`set up inquiry GET /Inquiry/setup/address-details should match the snapshot 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Inquiry address</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <label class="govuk-label" for="address-line-1">Address line 1</label>
                            <input class="govuk-input" id="address-line-1" name="addressLine1"
                            type="text" value="">
                        </div>
                        <div class="govuk-form-group">
                            <label class="govuk-label" for="address-line-2">Address line 2 (optional)</label>
                            <input class="govuk-input" id="address-line-2"
                            name="addressLine2" type="text" value="">
                        </div>
                        <div class="govuk-form-group">
                            <label class="govuk-label" for="town">Town or city</label>
                            <input class="govuk-input govuk-input govuk-input--width-20"
                            id="town" name="town" type="text" value="">
                        </div>
                        <div class="govuk-form-group">
                            <label class="govuk-label" for="county">County (optional)</label>
                            <input class="govuk-input govuk-input govuk-input--width-20"
                            id="county" name="county" type="text" value="">
                        </div>
                        <div class="govuk-form-group">
                            <label class="govuk-label" for="post-code">Postcode</label>
                            <input class="govuk-input govuk-input govuk-input--width-10"
                            id="post-code" name="postCode" type="text" value="">
                        </div>
                        <div class="govuk-form-group">
                            <input class="govuk-input" id="operation-type" name="operationType" type="hidden"
                            value="">
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`set up inquiry GET /inquiry/setup/date should match the snapshot 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - start case</span>
            <h1 class="govuk-heading-l">Inquiry date and time</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset" role="group" aria-describedby="inquiry-date-hint">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Date</legend>
                                <div id="inquiry-date-hint" class="govuk-hint">For example, 31 3 2025</div>
                                <div class="govuk-date-input" id="inquiry-date">
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="inquiry-date-day">Day</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                            id="inquiry-date-day" name="inquiry-date-day" type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="inquiry-date-month">Month</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                            id="inquiry-date-month" name="inquiry-date-month" type="text" value=""
                                            inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="inquiry-date-year">Year</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-4 govuk-input govuk-date-input__input"
                                            id="inquiry-date-year" name="inquiry-date-year" type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <fieldset class="govuk-fieldset">
                            <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Time</legend>
                            <div id="hearing-date-hint" class="govuk-hint">For example, 9:00 or 13:15</div>
                            <div class="govuk-date-input">
                                <div class="govuk-date-input__item govuk-!-margin-right-1">
                                    <div class="govuk-form-group">
                                        <label class="govuk-label" for="inquiry-time-hour">Hour</label>
                                        <input class="govuk-input govuk-input--width-2" id="inquiry-time-hour"
                                        name="inquiry-time-hour" type="text" value="10">
                                    </div>
                                </div>
                                <div class="govuk-date-input__item govuk-!-font-size-19 govuk-!-padding-0 govuk-!-margin-right-1">:</div>
                                <div class="govuk-date-input__item">
                                    <div class="govuk-form-group">
                                        <label class="govuk-label" for="inquiry-time-minute">Minute</label>
                                        <input class="govuk-input govuk-input--width-2" id="inquiry-time-minute"
                                        name="inquiry-time-minute" type="text" value="00">
                                    </div>
                                </div>
                            </div>
                        </fieldset>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`set up inquiry POST /Inquiry/setup/address-details should re-render the page if addressLine1 is an empty string 1`] = `
"<div class="govuk-error-summary" data-module="govuk-error-summary">
    <div role="alert">
        <h2 class="govuk-error-summary__title"> There is a problem</h2>
        <div class="govuk-error-summary__body">
            <ul class="govuk-list govuk-error-summary__list">
                <li><a href="#address-line-1">Enter address line 1</a>
                </li>
            </ul>
        </div>
    </div>
</div>"
`;

exports[`set up inquiry POST /Inquiry/setup/address-details should re-render the page if addressLine1 is null 1`] = `
"<div class="govuk-error-summary" data-module="govuk-error-summary">
    <div role="alert">
        <h2 class="govuk-error-summary__title"> There is a problem</h2>
        <div class="govuk-error-summary__body">
            <ul class="govuk-list govuk-error-summary__list">
                <li><a href="#address-line-1">Enter address line 1</a>
                </li>
            </ul>
        </div>
    </div>
</div>"
`;

exports[`set up inquiry POST /Inquiry/setup/address-details should re-render the page if the postcode is an empty string 1`] = `
"<div class="govuk-error-summary" data-module="govuk-error-summary">
    <div role="alert">
        <h2 class="govuk-error-summary__title"> There is a problem</h2>
        <div class="govuk-error-summary__body">
            <ul class="govuk-list govuk-error-summary__list">
                <li><a href="#post-code">Enter postcode</a>
                </li>
            </ul>
        </div>
    </div>
</div>"
`;

exports[`set up inquiry POST /Inquiry/setup/address-details should re-render the page if the postcode is invalid 1`] = `
"<div class="govuk-error-summary" data-module="govuk-error-summary">
    <div role="alert">
        <h2 class="govuk-error-summary__title"> There is a problem</h2>
        <div class="govuk-error-summary__body">
            <ul class="govuk-list govuk-error-summary__list">
                <li><a href="#post-code">Enter a full UK postcode</a>
                </li>
            </ul>
        </div>
    </div>
</div>"
`;

exports[`set up inquiry POST /Inquiry/setup/address-details should re-render the page if the postcode is null 1`] = `
"<div class="govuk-error-summary" data-module="govuk-error-summary">
    <div role="alert">
        <h2 class="govuk-error-summary__title"> There is a problem</h2>
        <div class="govuk-error-summary__body">
            <ul class="govuk-list govuk-error-summary__list">
                <li><a href="#post-code">Enter postcode</a>
                </li>
            </ul>
        </div>
    </div>
</div>"
`;

exports[`set up inquiry POST /Inquiry/setup/address-details should re-render the page if town is an empty string 1`] = `
"<div class="govuk-error-summary" data-module="govuk-error-summary">
    <div role="alert">
        <h2 class="govuk-error-summary__title"> There is a problem</h2>
        <div class="govuk-error-summary__body">
            <ul class="govuk-list govuk-error-summary__list">
                <li><a href="#town">Enter town or city</a>
                </li>
            </ul>
        </div>
    </div>
</div>"
`;

exports[`set up inquiry POST /Inquiry/setup/address-details should re-render the page if town is null 1`] = `
"<div class="govuk-error-summary" data-module="govuk-error-summary">
    <div role="alert">
        <h2 class="govuk-error-summary__title"> There is a problem</h2>
        <div class="govuk-error-summary__body">
            <ul class="govuk-list govuk-error-summary__list">
                <li><a href="#town">Enter town or city</a>
                </li>
            </ul>
        </div>
    </div>
</div>"
`;
